--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,6 @@ p {
   line-height: 1.5;
 }
 
-.post-container:nth-child(even) {
+.post-container:nth-child(odd) {
   background-color: #f2f2f2;
 }
