--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,6 @@ p {
   line-height: 1.5;
 }
 
-.post-author:nth-child(even) {
-  background-color: grey;
+.post-date:nth-child(even) {
+  background-color: black;
 }
