--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,6 @@ p {
   line-height: 1.5;
 }
 
-.post-date:nth-child(even) {
-  background-color: black;
+.post-container:nth-child(even) {
+  background-color: #f2f2f2;
 }
